Gradle!
Also moves to a versionning scheme based on "git describe" (no-SNAPSHOT),
changes the name of the output Debian package, and generates a Debian
changes file alongside the package (for use with things like reprepro).

Change-Id: I8c029cce10b8e6bc3e31b362d53c8d2e6fdb2d75